# ClickZone

./: .env  README.md  docker-compose.yml  index.html  package-lock.json  site.webmanifest  tableau.json  vite.config.ts  О игре.md
backend/: .env.example  ClickZone.py  Dockerfile  boot.sh  config.py  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  models.py
backend/app/auth/: routes.py  services.py  validation.py
backend/app/containers/: __init__.py  routes.py
backend/app/daily_rewards/: __init__.py  routes.py
backend/app/errors/: __init__.py  custom_errors.py  handlers.py
backend/app/jwt_handlers/: __init__.py  handlers.py
backend/app/main/: routes.py  validation.py
backend/app/profile/: __init__.py  routes.py  validation.py
backend/app/upgrades/: __init__.py  routes.py
backend/migrations/versions/: 07ef596db91a_added_keys_field_in_containerreward_.py  1f2743743ba7_added_upgrade_and_userupgrade_models.py  398338f494d6_initial_migration.py  46dc443bbe92_added_image_path_field_in_upgrade_model.py  49cfe7b05432_added_upgrade_and_userupgrade_models.py  57164b1948d9_added_index_in_upgrade_and_container_.py  65c786d8b8e2_added_achievement_and_userachievement_.py  837befb80f49_feat_container_model_with_.py  890f1d98f160_added_changes_number_and_keys_fields_in_.py  a84a45b88592_added_can_change_name_field_for_free_.py  c4189beafafe_deleted_token_model_added_name_and_.py  cb362e561c68_added_datetime_timezone_true_in_user_.py  d5057322f793_feat_added_current_reward_day_and_last_.py  fd32018c7a99_added_dailyreward_model.py
client/: .env  (+9 more)
(+620 files in other folders)
